--- a/siamese-net.ipynb
+++ b/siamese-net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Config():\n",
-    "    training_dir = \"./data/embeddingVectors/training/\"\n",
-    "    testing_dir = \"./data/embeddingVectors/testing/\"\n",
+    "    training_dir = \"./data/embeddingVectors/train/\"\n",
+    "    testing_dir = \"./data/embeddingVectors/test/\"\n",
     "    train_batch_size = 64\n",
     "    train_number_epochs = 100"
    ]
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +105,12 @@
     "                while True:\n",
     "                    #keep looping till the same class example is found\n",
     "                    vec1_folder = random.choice(dirs)\n",
-    "                    if os.path.isdir(self.folderDataset + \"/\" + vec1_folder):\n",
+    "                    if os.path.isdir(os.path.join(self.folderDataset, vec1_folder)):\n",
     "                        if vec0_folder==vec1_folder:\n",
     "                            files1_list = os.listdir(os.path.join(self.folderDataset, vec1_folder))\n",
     "                            files0_list = os.listdir(os.path.join(self.folderDataset, vec0_folder))\n",
-    "                            sample0 = random.choice(files0_list)\n",
-    "                            sample1 = random.choice(files1_list)\n",
+    "                            file0 = random.choice(files0_list)\n",
+    "                            file1 = random.choice(files1_list)\n",
     "                            break\n",
     "            else:\n",
     "                while True:\n",
@@ -120,21 +120,63 @@
     "                        if vec0_folder !=vec1_folder:\n",
     "                            files1_list = os.listdir(os.path.join(self.folderDataset, vec1_folder))\n",
     "                            files0_list = os.listdir(os.path.join(self.folderDataset, vec0_folder))\n",
-    "                            sample0 = random.choice(files0_list)\n",
-    "                            sample1 = random.choice(files1_list)\n",
+    "                            file0 = random.choice(files0_list)\n",
+    "                            file1 = random.choice(files1_list)\n",
     "                            break\n",
     "        #读取文件中的向量数据\n",
-    "        \n",
-    "        return sample0, sample1 , torch.from_numpy(np.array([int(vec1_folder!=vec0_folder)],dtype=np.float32))\n",
+    "        file0_path = os.path.join(os.path.join(self.folderDataset, vec0_folder), file0)\n",
+    "        file1_path = os.path.join(os.path.join(self.folderDataset, vec1_folder), file1)\n",
+    "        vector0_np = np.loadtxt(file0_path)\n",
+    "        vector1_np = np.loadtxt(file1_path)\n",
+    "        vector0 = torch.from_numpy(vector0_np)\n",
+    "        vector1 = torch.from_numpy(vector1_np)\n",
+    "        return vector0, vector1 , torch.from_numpy(np.array([int(vec1_folder!=vec0_folder)],dtype=np.float32))\n",
     "    \n",
     "    def __len__(self):\n",
     "        dirs = os.listdir(self.folderDataset)\n",
     "        len = 0\n",
     "        for  i, dir in enumerate(dirs, 0):\n",
     "            file_list = os.listdir(os.path.join(self.folderDataset, dir))\n",
-    "            len += file_list.count()\n",
+    "            len += file_list.__len__()\n",
     "                \n",
     "        return len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 测试数据处理类"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3., 2., 4., 5., 4., 5., 7., 6., 7., 7.]], dtype=torch.float64)\n",
+      "tensor([[1., 2., 1., 2., 1., 1., 1., 1., 4., 5.]], dtype=torch.float64)\n",
+      "tensor([[1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_dataset_ = Config.training_dir\n",
+    "\n",
+    "siamese_dataset_ = SiameseNetworkDataset(folderDataset=folder_dataset_)\n",
+    "train_dataloader_ = DataLoader(siamese_dataset_,\n",
+    "                        shuffle=True,\n",
+    "                        num_workers=8,\n",
+    "                        batch_size=1)\n",
+    "dataiter1 = iter(train_dataloader_)\n",
+    "v0,v1,label_ = next(dataiter1)\n",
+    "print(v0)\n",
+    "print(v1)\n",
+    "print(label_)"
    ]
   },
   {
@@ -218,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_dataset = dset.ImageFolder(root=Config.training_dir)\n",
+    "folder_dataset = Config.training_dir\n",
     "#其默认你的数据集已经自觉按照要分配的类型分成了不同的文件夹，一种类型的文件夹下面只存放一种类型的数据\n",
     "siamese_dataset = SiameseNetworkDataset(folderDataset=folder_dataset)\n",
     "train_dataloader = DataLoader(siamese_dataset,\n",
@@ -253,8 +295,7 @@
    "metadata": {},
    "source": [
     "## 测试\n",
-    "用欧式距离表示其相似性，label0表示相似，1表示不相似\n",
-    "The last 3 subjects were held out from the training, and will be used to test. The Distance between each image pair denotes the degree of similarity the model found between the two images. Less means it found more similar, while higher values indicate it found them to be dissimilar."
+    "用欧式距离表示其相似性，label0表示相似，1表示不相似\n"
    ]
   },
   {
@@ -263,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_dataset_test = dset.ImageFolder(root=Config.testing_dir)\n",
+    "folder_dataset_test = Config.testing_dir\n",
     "siamese_dataset = SiameseNetworkDataset(folderDataset=folder_dataset_test)\n",
     "\n",
     "test_dataloader = DataLoader(siamese_dataset,num_workers=6,batch_size=1,shuffle=True)\n",
